Use en_core_web_sm 3.8.0 wheel for spaCy 3.8.x

--- a/requirements.txt
+++ b/requirements.txt
@@ -23,4 +23,7 @@ spacy-loggers==1.0.5
 streamlit==1.46.0
 PyMuPDF==1.26.1
 easyocr==1.7.2
+spacy>=3.8.0,<3.9.0
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#egg=en_core_web_sm
+
 
